// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page displays an error if we submit without filling the password 1`] = `
<span
  className="error"
>
  REQ_PASSWORD
</span>
`;

exports[`Login page displays an error if we submit without filling the username 1`] = `
<span
  className="error"
>
  REQ_USERNAME
</span>
`;

exports[`Login page redirects if we are logged in 1`] = `
<Redirect
  to="/"
/>
`;

exports[`Login page renders without crashing 1`] = `
<section
  className="login section full-min-height is-flex"
>
  <div
    className="container mt-50"
  >
    <Component />
  </div>
  <div
    className="container mt-50"
  >
    <Component
      tabs={
        Array [
          Object {
            "active": true,
            "title": "TAB_TITLE_LOGIN",
            "url": "/login",
          },
        ]
      }
    />
  </div>
  <div
    className="container is-flex mt-75"
  >
    <form
      className="control"
      onSubmit={[Function]}
    >
      <div
        className="container columns full-height is-flex has-text-centered"
      >
        <div
          className="column is-hidden-mobile"
        />
        <div
          className="column"
        >
          <Component
            autoComplete="email"
            input={
              Object {
                "name": "username",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_EMAIL"
            type="email"
          />
          <PasswordToggle
            autoComplete="current-password"
            input={
              Object {
                "name": "password",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_PASSWORD"
          />
          <div
            className="field is-dark"
          >
            <p
              className="control rememeber-me"
            >
              <label
                className="checkbox"
              >
                <input
                  name="isPersistent"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                  value=""
                />
                REMEMBER_ME
              </label>
            </p>
          </div>
        </div>
        <div
          className="column has-text-centered"
        >
          <Link
            className="link"
            to={
              Object {
                "pathname": "/forgot-password",
              }
            }
          >
            FORGOT_PASSWORD
          </Link>
        </div>
        <div
          className="column"
        >
          <div
            className="field is-grouped is-grouped-centered"
          >
            <p
              className="control"
            >
              <button
                className="button is-primary"
                disabled={false}
                type="submit"
              >
                BTN_LOGIN
              </button>
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</section>
`;
